Flatten modular source tree.

--- a/encoder/CMakeLists.txt
+++ b/encoder/CMakeLists.txt
@@ -23,13 +23,12 @@ add_library(jxl_tiny STATIC EXCLUDE_FROM_ALL
   enc_group.cc
   enc_toc.cc
   enc_xyb.cc
-  modular/encoding/enc_encoding.cc
+  enc_modular.cc
   read_pfm.cc
   quant_weights.cc
   base/data_parallel.cc
   ans_common.cc
-  modular/encoding/encoding.cc
-  modular/modular_image.cc
+  modular.cc
   entropy_coder.cc
   quantizer.cc
   gaborish.cc
